--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="channel_name_empty">There\'s no Channel-Name defined.\nYou can change it under settings.</string>
     <string name="channel_stream">Stream</string>
     <string name="channel_logo">Logo</string>
+    <string name="channel_online">Online</string>
+    <string name="channel_offline">Offline</string>
 
 </resources>
