--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <!-- ActionBarItems -->
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
+    <string name="action_clear">Clear</string>
 
     <!-- ErrorMessages -->
     <string name="error_unexpected">A unicorn has blocked the request, please contact the developer.</string>
