--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
         that you are connected to an Edge, 3G or Wifi network.
     </string>
     <string name="error_data_error_title">Incorrect data</string>
-    <string name="error_data_error_message">Received data are invalid.</string>
+    <string name="error_data_error_message">Received data invalid</string>
 
     <!-- DialogMessages -->
     <string name="dialog_error_title">Error</string>
@@ -27,8 +27,11 @@
     <string name="channel_name">Channel-Name</string>
     <string name="channel_name_empty">There\'s no Channel-Name defined.\nYou can change it under settings.</string>
     <string name="channel_stream">Stream</string>
+    <string name="channel_watch_stream">Watch Stream</string>
+    <string name="channel_status">Status</string>
     <string name="channel_logo">Logo</string>
     <string name="channel_online">Online</string>
     <string name="channel_offline">Offline</string>
+    <string name="channel_unknown">Unknown</string>
 
 </resources>
