--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- General -->
-    <string name="app_name">TwitchDroid</string>
+    <string name="app_name">TD</string>
 
     <!-- ActionBarItems -->
     <string name="action_refresh">Refresh</string>
