--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
 
     <!-- Channel -->
     <string name="channel_name">Channel-Name</string>
-    <string name="channel_name_empty">There\'s no Channel-Name defined.\nYou can change it under settings.</string>
+    <string name="channel_name_empty">No username defined</string>
     <string name="channel_stream">Stream</string>
     <string name="channel_thumbnail">Thumbnail</string>
     <string name="channel_watch_stream">Watch Stream</string>
