--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -23,8 +23,17 @@
     <!-- DialogMessages -->
     <string name="dialog_error_title">Error</string>
     <string name="dialog_button_retry">Retry</string>
-    <string name="progress_dialog_title">Loading</string>
-    <string name="progress_dialog_message">Loading in progress…</string>
+    <string name="dialog_progress_title">Loading</string>
+    <string name="dialog_progress_message">Loading in progress…</string>
+    <string name="dialog_stream_quality_title">Live-stream quality</string>
+    <string name="dialog_stream_quality_default_value">Medium</string>
+    <string-array name="dialog_stream_quality_entries">
+        <item>Mobile</item>
+        <item>Low</item>
+        <item>Medium</item>
+        <item>High</item>
+        <item>Source</item>
+    </string-array>
 
     <!-- Channel -->
     <string name="channel_name">Channel-Name</string>
