--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -60,7 +60,7 @@
 
     <!-- Channel -->
     <string name="channel_name">Kanal</string>
-    <string name="channel_name_empty">Kein Benutzername definiert\n<b>[Einstellungen → Benutzername]</b></string>
+    <string name="channel_name_empty">Kein Benutzername definiert\n\n<b>[Einstellungen → Benutzername]</b></string>
     <string name="channel_stream">Stream</string>
     <string name="channel_thumbnail">Thumbnail</string>
     <string name="channel_watch_stream">Stream anschauen</string>
