--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -28,7 +28,7 @@
     <string name="action_clear">Löschen</string>
     <string name="action_search">Suche</string>
     <string name="action_search_hint">Stream suche</string>
-    <string name="action_route" />
+    <string name="action_route"/>
 
     <!-- ErrorMessages -->
     <string name="error_unexpected">Ein Einhorn hat den Request blockiert, bitte kontaktiere den Entwickler.</string>
@@ -41,6 +41,7 @@
     <string name="error_no_player_title">Kein Player vorhanden</string>
     <string name="error_no_player_message">Damit du Videos abspielen kannst,
         brauchst du einen Player, wie z.B. VLC oder MX Player.</string>
+    <string name="error_internal_player">Interner Player kann nicht verwendet werden</string>
 
     <!-- DialogMessages -->
     <string name="dialog_error_title">Fehler</string>
@@ -48,6 +49,7 @@
     <string name="dialog_progress_title">Laden</string>
     <string name="dialog_progress_message">Wird geladen…</string>
     <string name="dialog_username_title">Benutzername</string>
+    <string name="dialog_playlist_title">Video Playlist</string>
     <string name="dialog_stream_quality_title">Live-Stream Qualität</string>
     <string name="dialog_stream_quality_default_value">Medium</string>
     <string-array name="dialog_stream_quality_entries">
@@ -78,5 +80,12 @@
 
     <!-- Search -->
     <string name="search_no_result">Keine Streams gefunden</string>
+
+    <!-- Playlist -->
+    <string name="playlist_part"><u>PART</u></string>
+    <string name="playlist_slash">/</string>
+
+    <!-- Settings -->
+    <string name="preference_internal_player">Internen Player verwenden</string>
 
 </resources>
