--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -87,5 +87,6 @@
 
     <!-- Settings -->
     <string name="preference_internal_player">Internen Player verwenden</string>
+    <string name="preference_licenses">Open Source Lizenzen</string>
 
 </resources>
