--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -90,4 +90,7 @@
     <string name="preference_internal_player">Use the internal Player</string>
     <string name="preference_licenses">Open Source Licenses</string>
 
+    <!-- Game -->
+    <string name="game_box">Box</string>
+
 </resources>
