--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="dialog_progress_message">Loading in progress…</string>
     <string name="dialog_username_title">Username</string>
     <string name="dialog_playlist_title">Video Playlist</string>
-    <string name="dialog_stream_quality_title">Live-stream quality</string>
+    <string name="dialog_stream_quality_title">Quality</string>
     <string name="dialog_stream_quality_default_value">Medium</string>
     <string-array name="dialog_stream_quality_entries" translatable="false">
         <item>Mobile</item>
